# RealMQ

./: .gitignore  CMakeLists.txt  CMakeLists_copia.txt  LICENSE  README.md  config.yaml  install.sh  latency_plot.py  live_graphs.py  main.c  merge_csv.py  plot_tool.py  realmq_client.c  realmq_server.c  requirements.txt  server_stats.csv  stats.py  tegrastats_plot.py
.github/workflows/: cmake-single-platform.yml
chart-app/: package-lock.json  package.json  server.js
chart-app/src/: App.jsx
common/: CMakeLists.txt  config.c  config.h  logger.c  logger.h  message_queue.c  message_queue.h  qos.c  qos.h  string_manip.c  string_manip.h  utils.c  utils.h  zhelper.h  zhelpers.c  zhelpers.h
common/core/: config.c  config.h  logger.c  logger.h  zhelpers.c  zhelpers.h
common/qos/: accrual_detector.c  accrual_detector.h  accrual_detector.py  buffer_segments.c  buffer_segments.h  dynamic_array.c  dynamic_array.h  interpolation_search.c  interpolation_search.h  message_queue.c
common/qos/accrual_detector/: heartbeat_history.c  heartbeat_history.h  phi_accrual_failure_detector.c  phi_accrual_failure_detector.h  state.c  state.h
common/utils/: fs_utils.c  fs_utils.h  memory_leak_detector.c  memory_leak_detector.h  time_utils.c  time_utils.h  utils.c  utils.h
docs/: BENCHMARK.md  INSTALLATION.md  OPTIMIZATION.md  ROADMAP.md
draft_test/: CMakeLists.txt  client.c  server.c
src/: realmq_client.c  realmq_server.c
stats/: 16_10_2023_01_00_15_tcp_result.csv  16_10_2023_01_02_03_udp_result.csv  18_10_2023_01_15_57_tcp_result.csv  18_10_2023_01_17_40_tcp_result.csv  18_10_2023_01_20_41_udp_result.csv  18_10_2023_01_20_59_udp_result.csv  OG_result.csv  tcp.csv  udp.csv
stats/old/: MOD_result.csv
test/: plot.py
test/draft_test/: server.c
tests/: test_accrual_detector.c  test_buffer_segments.c  test_client_server_message_passing.c  test_config.c  test_convert_string_to_int.c  test_dynamic_array.c  test_fs_utils.c  test_get_address.c  test_heartbeat_history.c  test_marshalling.c  test_phi_accrual_failure_detector.c  test_process_missed_message_ids.c  test_split_string.c  test_state.c
tests/draft_test/: client.c  server.c  simulate_accrual_detector.c
tests/unity/: CMakeLists.txt
